# cauf-evidence

./: .gitignore  .pre-commit-config.yaml  .prettierrc  LICENSE.md  README.md  package-lock.json  package.json  pyproject.toml  run-backup.sh  webpack.config.js
.github/: dependabot.yml
.github/workflow/: main.yaml
.github/workflows/: main.yaml
assets/css/: styles.css
assets/js/: confirm.js  dialog.js  dtables.js  flags.js  listeners.js  main.js  members-table.js  search.js  sentry.js  theme.js  toasts.js  tooltip.js
docker/: Dockerfile  compose.dev.yaml  compose.prod.yaml  compose.test.yaml  compose.yaml  entrypoint.sh  secrets.env
nginx-proxy/: docker-compose.yaml  redirect.conf
scripts/: check_translations.py
secrets/: .env.example  .env.test  app.dev.env
static/: dialog.js  styles.css  toasts.js
tests/: conftest.py  factories.py  helpers.py  test_auditlog.py  test_init.py  wait_for_postgres.py
tests/api/: test_views.py
tests/clubs/: test_models.py  test_services.py  test_views.py
tests/competitions/: test_helpers.py  test_services.py  test_views.py
tests/core/: test_context_processors.py  test_i18n.py  test_models.py  test_sentry_tunnel.py  test_sentry_user_meta.py  test_tasks.py  test_validators.py
tests/finance/: test_commands.py  test_competition_only_fees.py  test_services.py  test_tasks.py
tests/international_tournaments/: test_export_rosters.py  test_roster_management.py
tests/members/: test_change_transfer_state.py  test_confirm_email.py  test_models.py  test_nsa_export.py  test_search.py  test_services.py  test_signals.py  test_toggle_favourite.py  test_transfer_admin.py  test_transfers.py  test_validators.py
tests/tournaments/: test_export_rosters.py  test_forms.py  test_models.py  test_views.py
tests/users/: test_adapters.py  test_api.py  test_signals.py  test_views.py
ultihub/: manage.py
ultihub/api/: serializers.py  urls.py  views.py
ultihub/clients/: fakturoid.py
ultihub/clubs/: admin.py  context_processors.py  forms.py  models.py  service.py  services.py  urls.py  validators.py  views.py
ultihub/clubs/migrations/: 0001_initial.py  0002_alter_club_options.py  0002_remove_organization_account_number_and_more.py  0003_club_identification_number_club_organization_name_and_more.py  0004_alter_club_city_alter_club_email_and_more.py  0005_member_coachlicence.py  0006_rename_is_email_confirmed_member_has_email_confirmed_and_more.py  0007_remove_member_club_delete_coachlicence_delete_member.py  0008_clubnotification.py  0009_club_short_name.py  0010_club_fakturoid_subject_id.py  0011_alter_club_short_name.py  0012_alter_team_options.py  0013_alter_team_options_alter_club_fakturoid_subject_id.py  0014_alter_club_fakturoid_subject_id.py  0015_alter_club_email.py
ultihub/competitions/: admin.py  enums.py  filters.py  forms.py  helpers.py  models.py  services.py  urls.py  views.py
ultihub/competitions/migrations/: 0001_initial.py  0002_alter_competition_unique_together_and_more.py  0003_competitionapplication_invoice_and_more.py  0004_tournament_teamattournament.py  0005_alter_competitionapplication_invoice.py  0006_season_invoices_generated_at.py  0007_competition_description.py  0008_competitionapplication_final_placement.py  0009_agelimit_season_age_reference_date_and_more.py  0010_alter_competitionapplication_competition_and_more.py  0011_alter_competitionapplication_state.py  0012_alter_agelimit_m_max.py  0013_rename_type_to_environment.py  0014_competition_allow_team_transfers.py
ultihub/core/: admin.py  api.py  apps.py  context_processors.py  fields.py  helpers.py  middleware.py  models.py  tasks.py  urls.py  validators.py  views.py
ultihub/core/fixtures/: initial_data.json
ultihub/core/migrations/: 0001_initial.py  0002_create_default_appsettings.py  0003_unaccent_extension.py
ultihub/core/templates/: 404.html  500.html
ultihub/core/templatetags/: webpack_static.py
ultihub/core/tests/: test_views.py
ultihub/finance/: admin.py  apps.py  forms.py  models.py  services.py  tasks.py  urls.py  views.py
ultihub/finance/clients/: fakturoid.py
ultihub/finance/migrations/: 0001_initial.py  0002_invoicerelatedobject.py  0003_alter_invoice_type.py  0004_invoice_fakturoid_invoice_id_and_more.py  0005_rename_amount_invoice_original_amount_invoice_lines.py  0006_remove_zero_amount_invoices.py  0007_invoice_fakturoid_due_on.py  0008_alter_invoice_state.py
ultihub/international_tournaments/: admin.py  apps.py  enums.py  forms.py  models.py  urls.py  views.py
ultihub/international_tournaments/migrations/: 0001_initial.py  0002_teamatinternationaltournament_final_placement_and_more.py  0003_memberatinternationaltournament.py
ultihub/members/: admin.py  apps.py  forms.py  helpers.py  models.py  services.py  tasks.py  urls.py  validators.py  views.py
ultihub/members/migrations/: 0001_initial.py  0002_alter_coachlicence_table_alter_member_table.py  0003_transfer.py  0004_remove_member_address_member_city_and_more.py  0005_remove_member_is_favourite.py  0006_member_original_id_and_more.py  0007_alter_member_marketing_consent_given_at.py  0008_remove_member_has_email_confirmed_and_more.py  0009_fix_email_confirmation.py  0010_alter_member_email_alter_member_legal_guardian_email.py  0011_alter_transfer_state.py  0012_member_email_confirmation_token_created_at.py  0013_transfer_unique_requested_transfer_per_member.py  0014_favouritemember.py
ultihub/rest_api/: serializers.py  urls.py  views.py
ultihub/tournaments/: admin.py  apps.py  forms.py  models.py  scheduler.py  signals.py  tasks.py  urls.py  views.py
ultihub/tournaments/migrations/: 0001_initial.py  0002_memberattournament_is_spirit_captain_and_more.py  0003_alter_memberattournament_team_at_tournament_and_more.py  0004_alter_teamattournament_unique_together_and_more.py  0005_tournament_are_reminders_sent.py  0005_tournament_winner_team_sotg_winner_team.py  (+1 more)
ultihub/ultihub/: asgi.py  settings.py  urls.py  wsgi.py
ultihub/users/: adapters.py  admin.py  api.py  context_processors.py  forms.py  models.py  services.py  signals.py  urls.py  views.py
(+94 files in other folders)
