[project]
name = "ultihub"
version = "0.1.0"
description = "An app for ultimate frisbee national association and clubs to manage memberships, fees, transfers, and other administrative tasks efficiently."
authors = [{ name = "Marek Dostál", email = "dstlmrk@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12.5,<4.0"

dependencies = [
    "django>=6.0.6,<7.0",
    "gunicorn>=26.0.0",
    "django-environ>=0.14.0",
    "psycopg2-binary>=2.9.12",
    "sentry-sdk[django]>=2.63.0",
    "ddtrace>=4.10.6",
    "python-json-logger>=4.1.0",
    "django-allauth[socialaccount]>=65.18.0",
    "django-htmx>=1.27.0",
    "django-debug-toolbar>=7.0.0",
    "django-crispy-forms>=2.6",
    "crispy-bootstrap5>=2026.3",
    "django-guardian>=3.3.2",
    "djangorestframework>=3.17.1",
    "django-countries>=9.0.0",
    "django-admin-rangefilter>=0.13.5",
    "fakeredis>=2.36.2",
    "django-filter>=25.2",
    "requests>=2.32.5",
    "urllib3>=2.6.3",
    "tenacity>=9.1.4",
    "django-extensions>=3.2.3",
    "pyparsing>=3.3.2",
    "pydot>=3.0.3",
    "pycountry>=26.2.16",
    "protobuf>=7.35.1,<8.0",
    "huey[redis]>=3.0.3,<4.0.0",
    "django-dbbackup>=5.3.0,<6.0.0",
    "django-storages[dropbox]>=1.14.6,<2.0.0",
    "django-solo>=2.5.1",
    "dnspython>=2.6.1",
    "django-auditlog>=3.4.1",
    "sqlparse>=0.5.4",
    "cryptography>=46.0.5",
    "filelock>=3.29.4",
    "virtualenv>=21.5.1",
]

[dependency-groups]
dev = [
    "pytest-django>=4.12.0",
    "ruff>=0.15.20",
    "poethepoet>=0.47.0",
    "mypy>=2.1.0",
    "django-stubs>=6.0.6",
    "pre-commit>=4.6.0",
    "factory-boy>=3.3.1",
    "pytest-factoryboy>=2.7.0",
    "types-requests>=2.33.0.20260518",
    "pytest-cov>=7.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["ultihub"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
django_find_project = false
DJANGO_SETTINGS_MODULE = "ultihub.settings"
pythonpath = ". ultihub"
addopts = ["--import-mode=importlib"]
python_files = ["test_*.py", "*_test.py"]
filterwarnings = [
  "ignore::DeprecationWarning:rq.utils",
  "ignore:The FORMS_URLFIELD_ASSUME_HTTPS transitional setting is deprecated.",
]

[tool.coverage.run]
source = ["ultihub"]
omit = [
  "*/migrations/*",
  "*/tests/*",
  "ultihub/manage.py",
  "ultihub/ultihub/wsgi.py",
  "ultihub/ultihub/asgi.py",
  "ultihub/ultihub/settings.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
	"I",   # isort
	"E",   # pycodestyle errors
	"W",   # pycodestyle warnings
	"F",   # Pyflakes
	"UP",  # pyupgrade
	"B",   # flake8-bugbear
	"DJ",  # flake8-django
	"SIM", # flake8-simplify
	"T20", # flake8-print
	"PTH", # flake8-pathlib
	"S",   # flake8-bandit (security)
	"DTZ", # flake8-datetimez
	"C4",  # flake8-comprehensions
	"RUF", # ruff-specific rules
]
ignore = [
	# Mutable class defaults are pervasive and intentional on Django model/admin
	# and DRF serializer class attributes (Meta.fields, list_display, ...).
	"RUF012",
]

[tool.ruff.lint.per-file-ignores]
# Tests rely on assert, dummy credentials/random data and naive fixture dates.
"tests/**" = ["S101", "S105", "S106", "S311", "DTZ001", "DTZ007", "DTZ011"]
"**/tests/**" = ["S101", "S105", "S106", "S311", "DTZ001", "DTZ007", "DTZ011"]
# One-off operational scripts talk to trusted internal endpoints and parse
# external naive dates; request timeouts, asserts and tz-awareness add no value.
"ultihub/**/management/commands/**" = ["S101", "S113", "DTZ001", "DTZ007"]
# Birth-number validation works with date-only domain values, not tz-aware moments.
"ultihub/members/validators.py" = ["DTZ001", "DTZ007", "DTZ011"]

[tool.mypy]
mypy_path = "ultihub"
check_untyped_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true
ignore_missing_imports = true
strict_optional = true
exclude = "tests"
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "ultihub.settings"

[tool.poe]
default_array_item_task_type = "cmd"

[tool.poe.tasks]
_run-dev = ["docker compose -f docker/compose.dev.yaml up -d", "python tests/wait_for_postgres.py"]
_stop-dev = "docker compose -f docker/compose.dev.yaml down"

[tool.poe.tasks.format]
help = "Run formating tools on the code base"
sequence = [
  "ruff check --select I001,F401 --fix-only .",
  "ruff format .",
  "npx prettier --write ."
]

[tool.poe.tasks.lint]
help = "Run linter"
cmd = "ruff check --no-fix --quiet --output-format=concise --force-exclude ."

[tool.poe.tasks.style]
help = "Validate code style"
sequence = [
  "ruff check --no-fix --select I001 .",
  "ruff format --check --diff ."
]

[tool.poe.tasks.migrations-check]
help = "Check migrations"
sequence = [
  "docker compose -f docker/compose.test.yaml up -d",
  "python tests/wait_for_postgres.py",
  "bash -c 'uv run python ultihub/manage.py makemigrations --check --dry-run || EXIT_CODE=$?; docker compose -f docker/compose.test.yaml down; exit $EXIT_CODE'"
]
envfile = "secrets/.env.test"

[tool.poe.tasks.type]
help = "Run the mypy type checker"
cmd = "mypy ."
envfile = "secrets/.env.test"

[tool.poe.tasks.audit]
help = "Audit installed dependencies for known security vulnerabilities"
cmd = "uv run --with pip-audit pip-audit"

[tool.poe.tasks.test]
help = "Run unit tests with coverage (without checks)"
sequence = [
  "docker compose -f docker/compose.test.yaml up -d",
  "python tests/wait_for_postgres.py",
  "bash -c 'pytest --cov --cov-report=term-missing || EXIT_CODE=$?; docker compose -f docker/compose.test.yaml down --volumes; exit $EXIT_CODE'"
]
envfile = "secrets/.env.test"

[tool.poe.tasks.test-db-up]
help = "Start the test database for the fast test loop (keeps it running)"
sequence = [
  "docker compose -f docker/compose.test.yaml up -d",
  "python tests/wait_for_postgres.py"
]
envfile = "secrets/.env.test"

[tool.poe.tasks.test-db-down]
help = "Stop the test database started by test-db-up"
cmd = "docker compose -f docker/compose.test.yaml down --volumes"

[tool.poe.tasks.t]
help = "Run tests against the already running test DB, reusing the schema. Pass pytest args directly, e.g. 'poe t -k transfer -x' or 'poe t tests/users/'"
cmd = "pytest --reuse-db"
envfile = "secrets/.env.test"

[tool.poe.tasks.migrate]
help = "Migrate the database"
cmd = "docker compose -f docker/compose.dev.yaml exec app python manage.py migrate"

[tool.poe.tasks.makemigrations]
help = "Make migrations"
cmd = "docker compose -f docker/compose.dev.yaml exec app python manage.py makemigrations"

[tool.poe.tasks.shell]
help = "Run a shell"
cmd = "docker compose -f docker/compose.dev.yaml exec app python manage.py shell"

[tool.poe.tasks.loaddata]
help = "Load data from a fixture"
cmd = "docker compose -f docker/compose.dev.yaml exec app python manage.py loaddata initial_data"
